added checkbox to query